[package]
name = "bittorrent_client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[workspace]
members = ["bencode"]

[dependencies]
reqwest =  { version = "0.11.11", features = ["json"] }
tokio = { version = "1.20.0", features = ["sync", "rt-multi-thread", "macros"] }
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
futures = "0.3.21"
clap =  { version = "3.2.12", features = ["derive"] }
async-channel = "1.6.1"
bencode = { path = "bencode" }

[profile.release]
opt-level = "z"
strip = true
codegen-units = 1