[package]
name = "bittorrent_client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[workspace]

[dependencies]
reqwest =  { version = "0.11.11", features = ["json"] }
tokio = { version = "1.20.0", features = ["sync", "rt-multi-thread", "macros"] }
anyhow = "1.0.66"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
futures = "0.3.21"
clap =  { version = "3.2.12", features = ["derive"] }
async-channel = "1.6.1"
lava_torrent = "0.8.1"
urlencoding = "2.1.2"
sha1 = "0.10.5"
tokio-byteorder = "0.3.0"
byteorder = "1.4.3"
percent-encoding = "2.2.0"
lazy_static = "1.4.0"
rand = "0.8.5"

[profile.release]
opt-level = "z"
strip = true
codegen-units = 1